Fixing cards overflow

--- a/src/assets/styles/cmps/_meteor-list.scss
+++ b/src/assets/styles/cmps/_meteor-list.scss
@@ -10,7 +10,7 @@
     gap: 25px;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     overflow: auto;
-    max-height: 600px;
+    max-height: 580px;
     padding-inline-end: 20px;
 
     &::-webkit-scrollbar {
